Add authentication gate to index.html
Add authentication gate section with login prompt.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
   </header>
 
   <main class="container">
+    <div id="authGate" class="card">
+  <h2>Accès restreint</h2>
+  <p class="muted">Connecte-toi pour afficher les formulaires et accéder aux données.</p>
+  <button id="btnLogin2" class="btn btn-primary">Se connecter</button>
+</div>
+
     <section class="cards">
       <div class="card">
         <h2>Budgets</h2>
