Add theme toggle button to header

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
       <p class="muted">Budgets • Dépenses • Suivi devis → BC → service fait → facture • Projets • Porteurs</p>
     </div>
     <div class="topbar-actions">
+      <button id="btnTheme" class="btn btn-ghost" type="button" title="Basculer clair/sombre">
+  ☀️ Clair
+</button>
+
       <button id="btnLogin" class="btn">Se connecter</button>
       <button id="btnLogout" class="btn btn-ghost" style="display:none;">Se déconnecter</button>
     </div>
